m_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     program -> <empty>
Rule 3     instructions -> instructions instruction
Rule 4     instructions -> instruction
Rule 5     instruction -> { instructions }
Rule 6     instruction -> RETURN ;
Rule 7     instruction -> RETURN expr ;
Rule 8     instruction -> BREAK ;
Rule 9     instruction -> CONTINUE ;
Rule 10    instruction -> PRINT expressions ;
Rule 11    instruction -> var = expr ;
Rule 12    instruction -> var ADDASSIGN expr ;
Rule 13    instruction -> var SUBASSIGN expr ;
Rule 14    instruction -> var MULASSIGN expr ;
Rule 15    instruction -> var DIVASSIGN expr ;
Rule 16    instruction -> WHILE ( condition ) instruction
Rule 17    instruction -> FOR ID = range instruction
Rule 18    instruction -> FOR ( ID = range ) instruction
Rule 19    instruction -> IF ( condition ) instruction
Rule 20    instruction -> IF ( condition ) instruction ELSE instruction
Rule 21    condition -> expr EQ expr
Rule 22    condition -> expr NE expr
Rule 23    condition -> expr GE expr
Rule 24    condition -> expr LE expr
Rule 25    condition -> expr > expr
Rule 26    condition -> expr < expr
Rule 27    var -> ID
Rule 28    expr -> ID [ range ]
Rule 29    var -> ID [ range ]
Rule 30    var -> ID [ expr ]
Rule 31    var -> ID [ expr , expr ]
Rule 32    expr -> ID [ expr ]
Rule 33    expr -> ID [ expr , expr ]
Rule 34    expr -> - expr
Rule 35    expr -> expr + expr
Rule 36    expr -> expr - expr
Rule 37    expr -> expr * expr
Rule 38    expr -> expr / expr
Rule 39    expr -> expr DOTADD expr
Rule 40    expr -> expr DOTSUB expr
Rule 41    expr -> expr DOTMUL expr
Rule 42    expr -> expr DOTDIV expr
Rule 43    expr -> ( expr )
Rule 44    expr -> expr '
Rule 45    expr -> EYE ( expr )
Rule 46    expr -> ZEROS ( expr )
Rule 47    expr -> ONES ( expr )
Rule 48    expr -> FLOATNUM
Rule 49    expr -> INTNUM
Rule 50    expr -> STRING
Rule 51    expr -> ID
Rule 52    expr -> [ expressions ]
Rule 53    expr -> [ range ]
Rule 54    expressions -> expressions , expr
Rule 55    expressions -> expr
Rule 56    range -> expr : expr

Terminals, with rules where they appear

'                    : 44
(                    : 16 18 19 20 43 45 46 47
)                    : 16 18 19 20 43 45 46 47
*                    : 37
+                    : 35
,                    : 31 33 54
-                    : 34 36
/                    : 38
:                    : 56
;                    : 6 7 8 9 10 11 12 13 14 15
<                    : 26
=                    : 11 17 18
>                    : 25
ADDASSIGN            : 12
BREAK                : 8
CONTINUE             : 9
DIVASSIGN            : 15
DOTADD               : 39
DOTDIV               : 42
DOTMUL               : 41
DOTSUB               : 40
ELSE                 : 20
EQ                   : 21
EYE                  : 45
FLOATNUM             : 48
FOR                  : 17 18
GE                   : 23
ID                   : 17 18 27 28 29 30 31 32 33 51
IF                   : 19 20
INTNUM               : 49
LE                   : 24
MULASSIGN            : 14
NE                   : 22
ONES                 : 47
PRINT                : 10
RETURN               : 6 7
STRING               : 50
SUBASSIGN            : 13
WHILE                : 16
ZEROS                : 46
[                    : 28 29 30 31 32 33 52 53
]                    : 28 29 30 31 32 33 52 53
error                : 
{                    : 5
}                    : 5

Nonterminals, with rules where they appear

condition            : 16 19 20
expr                 : 7 11 12 13 14 15 21 21 22 22 23 23 24 24 25 25 26 26 30 31 31 32 33 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46 47 54 55 56 56
expressions          : 10 52 54
instruction          : 3 4 16 17 18 19 20 20
instructions         : 1 3 5
program              : 0
range                : 17 18 28 29 53
var                  : 11 12 13 14 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) program -> .
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . RETURN ;
    (7) instruction -> . RETURN expr ;
    (8) instruction -> . BREAK ;
    (9) instruction -> . CONTINUE ;
    (10) instruction -> . PRINT expressions ;
    (11) instruction -> . var = expr ;
    (12) instruction -> . var ADDASSIGN expr ;
    (13) instruction -> . var SUBASSIGN expr ;
    (14) instruction -> . var MULASSIGN expr ;
    (15) instruction -> . var DIVASSIGN expr ;
    (16) instruction -> . WHILE ( condition ) instruction
    (17) instruction -> . FOR ID = range instruction
    (18) instruction -> . FOR ( ID = range ) instruction
    (19) instruction -> . IF ( condition ) instruction
    (20) instruction -> . IF ( condition ) instruction ELSE instruction
    (27) var -> . ID
    (29) var -> . ID [ range ]
    (30) var -> . ID [ expr ]
    (31) var -> . ID [ expr , expr ]

    $end            reduce using rule 2 (program -> .)
    {               shift and go to state 4
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 8
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 13
    ID              shift and go to state 12

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    var                            shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (3) instructions -> instructions . instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . RETURN ;
    (7) instruction -> . RETURN expr ;
    (8) instruction -> . BREAK ;
    (9) instruction -> . CONTINUE ;
    (10) instruction -> . PRINT expressions ;
    (11) instruction -> . var = expr ;
    (12) instruction -> . var ADDASSIGN expr ;
    (13) instruction -> . var SUBASSIGN expr ;
    (14) instruction -> . var MULASSIGN expr ;
    (15) instruction -> . var DIVASSIGN expr ;
    (16) instruction -> . WHILE ( condition ) instruction
    (17) instruction -> . FOR ID = range instruction
    (18) instruction -> . FOR ( ID = range ) instruction
    (19) instruction -> . IF ( condition ) instruction
    (20) instruction -> . IF ( condition ) instruction ELSE instruction
    (27) var -> . ID
    (29) var -> . ID [ range ]
    (30) var -> . ID [ expr ]
    (31) var -> . ID [ expr , expr ]

    $end            reduce using rule 1 (program -> instructions .)
    {               shift and go to state 4
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 8
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 13
    ID              shift and go to state 12

    instruction                    shift and go to state 14
    var                            shift and go to state 9

state 3

    (4) instructions -> instruction .

    {               reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 4

    (5) instruction -> { . instructions }
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . RETURN ;
    (7) instruction -> . RETURN expr ;
    (8) instruction -> . BREAK ;
    (9) instruction -> . CONTINUE ;
    (10) instruction -> . PRINT expressions ;
    (11) instruction -> . var = expr ;
    (12) instruction -> . var ADDASSIGN expr ;
    (13) instruction -> . var SUBASSIGN expr ;
    (14) instruction -> . var MULASSIGN expr ;
    (15) instruction -> . var DIVASSIGN expr ;
    (16) instruction -> . WHILE ( condition ) instruction
    (17) instruction -> . FOR ID = range instruction
    (18) instruction -> . FOR ( ID = range ) instruction
    (19) instruction -> . IF ( condition ) instruction
    (20) instruction -> . IF ( condition ) instruction ELSE instruction
    (27) var -> . ID
    (29) var -> . ID [ range ]
    (30) var -> . ID [ expr ]
    (31) var -> . ID [ expr , expr ]

    {               shift and go to state 4
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 8
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 13
    ID              shift and go to state 12

    instructions                   shift and go to state 15
    instruction                    shift and go to state 3
    var                            shift and go to state 9

state 5

    (6) instruction -> RETURN . ;
    (7) instruction -> RETURN . expr ;
    (28) expr -> . ID [ range ]
    (32) expr -> . ID [ expr ]
    (33) expr -> . ID [ expr , expr ]
    (34) expr -> . - expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . expr DOTADD expr
    (40) expr -> . expr DOTSUB expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DOTDIV expr
    (43) expr -> . ( expr )
    (44) expr -> . expr '
    (45) expr -> . EYE ( expr )
    (46) expr -> . ZEROS ( expr )
    (47) expr -> . ONES ( expr )
    (48) expr -> . FLOATNUM
    (49) expr -> . INTNUM
    (50) expr -> . STRING
    (51) expr -> . ID
    (52) expr -> . [ expressions ]
    (53) expr -> . [ range ]

    ;               shift and go to state 16
    ID              shift and go to state 18
    -               shift and go to state 20
    (               shift and go to state 21
    EYE             shift and go to state 22
    ZEROS           shift and go to state 23
    ONES            shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    STRING          shift and go to state 27
    [               shift and go to state 19

    expr                           shift and go to state 17

state 6

    (8) instruction -> BREAK . ;

    ;               shift and go to state 28


state 7

    (9) instruction -> CONTINUE . ;

    ;               shift and go to state 29


state 8

    (10) instruction -> PRINT . expressions ;
    (54) expressions -> . expressions , expr
    (55) expressions -> . expr
    (28) expr -> . ID [ range ]
    (32) expr -> . ID [ expr ]
    (33) expr -> . ID [ expr , expr ]
    (34) expr -> . - expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . expr DOTADD expr
    (40) expr -> . expr DOTSUB expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DOTDIV expr
    (43) expr -> . ( expr )
    (44) expr -> . expr '
    (45) expr -> . EYE ( expr )
    (46) expr -> . ZEROS ( expr )
    (47) expr -> . ONES ( expr )
    (48) expr -> . FLOATNUM
    (49) expr -> . INTNUM
    (50) expr -> . STRING
    (51) expr -> . ID
    (52) expr -> . [ expressions ]
    (53) expr -> . [ range ]

    ID              shift and go to state 18
    -               shift and go to state 20
    (               shift and go to state 21
    EYE             shift and go to state 22
    ZEROS           shift and go to state 23
    ONES            shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    STRING          shift and go to state 27
    [               shift and go to state 19

    expressions                    shift and go to state 30
    expr                           shift and go to state 31

state 9

    (11) instruction -> var . = expr ;
    (12) instruction -> var . ADDASSIGN expr ;
    (13) instruction -> var . SUBASSIGN expr ;
    (14) instruction -> var . MULASSIGN expr ;
    (15) instruction -> var . DIVASSIGN expr ;

    =               shift and go to state 32
    ADDASSIGN       shift and go to state 33
    SUBASSIGN       shift and go to state 34
    MULASSIGN       shift and go to state 35
    DIVASSIGN       shift and go to state 36


state 10

    (16) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 37


state 11

    (17) instruction -> FOR . ID = range instruction
    (18) instruction -> FOR . ( ID = range ) instruction

    ID              shift and go to state 38
    (               shift and go to state 39


state 12

    (27) var -> ID .
    (29) var -> ID . [ range ]
    (30) var -> ID . [ expr ]
    (31) var -> ID . [ expr , expr ]

    =               reduce using rule 27 (var -> ID .)
    ADDASSIGN       reduce using rule 27 (var -> ID .)
    SUBASSIGN       reduce using rule 27 (var -> ID .)
    MULASSIGN       reduce using rule 27 (var -> ID .)
    DIVASSIGN       reduce using rule 27 (var -> ID .)
    [               shift and go to state 40


state 13

    (19) instruction -> IF . ( condition ) instruction
    (20) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 41


state 14

    (3) instructions -> instructions instruction .

    {               reduce using rule 3 (instructions -> instructions instruction .)
    RETURN          reduce using rule 3 (instructions -> instructions instruction .)
    BREAK           reduce using rule 3 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instructions instruction .)
    PRINT           reduce using rule 3 (instructions -> instructions instruction .)
    WHILE           reduce using rule 3 (instructions -> instructions instruction .)
    FOR             reduce using rule 3 (instructions -> instructions instruction .)
    IF              reduce using rule 3 (instructions -> instructions instruction .)
    ID              reduce using rule 3 (instructions -> instructions instruction .)
    $end            reduce using rule 3 (instructions -> instructions instruction .)
    }               reduce using rule 3 (instructions -> instructions instruction .)


state 15

    (5) instruction -> { instructions . }
    (3) instructions -> instructions . instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . RETURN ;
    (7) instruction -> . RETURN expr ;
    (8) instruction -> . BREAK ;
    (9) instruction -> . CONTINUE ;
    (10) instruction -> . PRINT expressions ;
    (11) instruction -> . var = expr ;
    (12) instruction -> . var ADDASSIGN expr ;
    (13) instruction -> . var SUBASSIGN expr ;
    (14) instruction -> . var MULASSIGN expr ;
    (15) instruction -> . var DIVASSIGN expr ;
    (16) instruction -> . WHILE ( condition ) instruction
    (17) instruction -> . FOR ID = range instruction
    (18) instruction -> . FOR ( ID = range ) instruction
    (19) instruction -> . IF ( condition ) instruction
    (20) instruction -> . IF ( condition ) instruction ELSE instruction
    (27) var -> . ID
    (29) var -> . ID [ range ]
    (30) var -> . ID [ expr ]
    (31) var -> . ID [ expr , expr ]

    }               shift and go to state 42
    {               shift and go to state 4
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 8
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 13
    ID              shift and go to state 12

    instruction                    shift and go to state 14
    var                            shift and go to state 9

state 16

    (6) instruction -> RETURN ; .

    {               reduce using rule 6 (instruction -> RETURN ; .)
    RETURN          reduce using rule 6 (instruction -> RETURN ; .)
    BREAK           reduce using rule 6 (instruction -> RETURN ; .)
    CONTINUE        reduce using rule 6 (instruction -> RETURN ; .)
    PRINT           reduce using rule 6 (instruction -> RETURN ; .)
    WHILE           reduce using rule 6 (instruction -> RETURN ; .)
    FOR             reduce using rule 6 (instruction -> RETURN ; .)
    IF              reduce using rule 6 (instruction -> RETURN ; .)
    ID              reduce using rule 6 (instruction -> RETURN ; .)
    $end            reduce using rule 6 (instruction -> RETURN ; .)
    }               reduce using rule 6 (instruction -> RETURN ; .)
    ELSE            reduce using rule 6 (instruction -> RETURN ; .)


state 17

    (7) instruction -> RETURN expr . ;
    (35) expr -> expr . + expr
    (36) expr -> expr . - expr
    (37) expr -> expr . * expr
    (38) expr -> expr . / expr
    (39) expr -> expr . DOTADD expr
    (40) expr -> expr . DOTSUB expr
    (41) expr -> expr . DOTMUL expr
    (42) expr -> expr . DOTDIV expr
    (44) expr -> expr . '

    ;               shift and go to state 43
    +               shift and go to state 44
    -               shift and go to state 45
    *               shift and go to state 46
    /               shift and go to state 47
    DOTADD          shift and go to state 48
    DOTSUB          shift and go to state 49
    DOTMUL          shift and go to state 50
    DOTDIV          shift and go to state 51
    '               shift and go to state 52


state 18

    (28) expr -> ID . [ range ]
    (32) expr -> ID . [ expr ]
    (33) expr -> ID . [ expr , expr ]
    (51) expr -> ID .

    [               shift and go to state 53
    ;               reduce using rule 51 (expr -> ID .)
    +               reduce using rule 51 (expr -> ID .)
    -               reduce using rule 51 (expr -> ID .)
    *               reduce using rule 51 (expr -> ID .)
    /               reduce using rule 51 (expr -> ID .)
    DOTADD          reduce using rule 51 (expr -> ID .)
    DOTSUB          reduce using rule 51 (expr -> ID .)
    DOTMUL          reduce using rule 51 (expr -> ID .)
    DOTDIV          reduce using rule 51 (expr -> ID .)
    '               reduce using rule 51 (expr -> ID .)
    ,               reduce using rule 51 (expr -> ID .)
    :               reduce using rule 51 (expr -> ID .)
    ]               reduce using rule 51 (expr -> ID .)
    )               reduce using rule 51 (expr -> ID .)
    EQ              reduce using rule 51 (expr -> ID .)
    NE              reduce using rule 51 (expr -> ID .)
    GE              reduce using rule 51 (expr -> ID .)
    LE              reduce using rule 51 (expr -> ID .)
    >               reduce using rule 51 (expr -> ID .)
    <               reduce using rule 51 (expr -> ID .)
    {               reduce using rule 51 (expr -> ID .)
    RETURN          reduce using rule 51 (expr -> ID .)
    BREAK           reduce using rule 51 (expr -> ID .)
    CONTINUE        reduce using rule 51 (expr -> ID .)
    PRINT           reduce using rule 51 (expr -> ID .)
    WHILE           reduce using rule 51 (expr -> ID .)
    FOR             reduce using rule 51 (expr -> ID .)
    IF              reduce using rule 51 (expr -> ID .)
    ID              reduce using rule 51 (expr -> ID .)


state 19

    (52) expr -> [ . expressions ]
    (53) expr -> [ . range ]
    (54) expressions -> . expressions , expr
    (55) expressions -> . expr
    (56) range -> . expr : expr
    (28) expr -> . ID [ range ]
    (32) expr -> . ID [ expr ]
    (33) expr -> . ID [ expr , expr ]
    (34) expr -> . - expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . expr DOTADD expr
    (40) expr -> . expr DOTSUB expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DOTDIV expr
    (43) expr -> . ( expr )
    (44) expr -> . expr '
    (45) expr -> . EYE ( expr )
    (46) expr -> . ZEROS ( expr )
    (47) expr -> . ONES ( expr )
    (48) expr -> . FLOATNUM
    (49) expr -> . INTNUM
    (50) expr -> . STRING
    (51) expr -> . ID
    (52) expr -> . [ expressions ]
    (53) expr -> . [ range ]

    ID              shift and go to state 18
    -               shift and go to state 20
    (               shift and go to state 21
    EYE             shift and go to state 22
    ZEROS           shift and go to state 23
    ONES            shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    STRING          shift and go to state 27
    [               shift and go to state 19

    expressions                    shift and go to state 54
    range                          shift and go to state 55
    expr                           shift and go to state 56

state 20

    (34) expr -> - . expr
    (28) expr -> . ID [ range ]
    (32) expr -> . ID [ expr ]
    (33) expr -> . ID [ expr , expr ]
    (34) expr -> . - expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . expr DOTADD expr
    (40) expr -> . expr DOTSUB expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DOTDIV expr
    (43) expr -> . ( expr )
    (44) expr -> . expr '
    (45) expr -> . EYE ( expr )
    (46) expr -> . ZEROS ( expr )
    (47) expr -> . ONES ( expr )
    (48) expr -> . FLOATNUM
    (49) expr -> . INTNUM
    (50) expr -> . STRING
    (51) expr -> . ID
    (52) expr -> . [ expressions ]
    (53) expr -> . [ range ]

    ID              shift and go to state 18
    -               shift and go to state 20
    (               shift and go to state 21
    EYE             shift and go to state 22
    ZEROS           shift and go to state 23
    ONES            shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    STRING          shift and go to state 27
    [               shift and go to state 19

    expr                           shift and go to state 57

state 21

    (43) expr -> ( . expr )
    (28) expr -> . ID [ range ]
    (32) expr -> . ID [ expr ]
    (33) expr -> . ID [ expr , expr ]
    (34) expr -> . - expr
    (35) expr -> . expr + expr
    (36) expr -> . expr - expr
    (37) expr -> . expr * expr
    (38) expr -> . expr / expr
    (39) expr -> . expr DOTADD expr
    (40) expr -> . expr DOTSUB expr
    (41) expr -> . expr DOTMUL expr
    (42) expr -> . expr DOTDIV expr
    (43) expr -> . ( expr )
    (44) expr -> . expr '
    (45) expr -> . EYE ( expr )
    (46) expr -> . ZEROS ( expr )
    (47) expr -> . ONES ( expr )
    (48) expr -> . FLOATNUM
    (49) expr -> . INTNUM
    (50) expr -> . STRING
    (51) expr -> . ID
    (52) expr -> . [ expressions ]
    (53) expr -> . [ range ]

    ID              shift and go to state 18
    -               shift and go to state 20
    (               shift and go to state 21
    EYE             shift and go to state 22
    ZEROS           shift and go to state 23
    ONES            shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    STRING          shift and go to state 27
    [               shift and go to state 19

    expr                           shift and go to state 58

state 22

    (45) expr -> EYE . ( expr )

    (               shift and go to state 59


state 23

    (46) expr -> ZEROS . ( expr )

    (               shift and go to state 60


state 24

    (47) expr -> ONES . ( expr )

    (               shift and go to state 61


state 25

    (48) expr -> FLOATNUM .

    ;               reduce using rule 48 (expr -> FLOATNUM .)
    +               reduce using rule 48 (expr -> FLOATNUM .)
    -               reduce using rule 48 (expr -> FLOATNUM .)
    *               reduce using rule 48 (expr -> FLOATNUM .)
    /               reduce using rule 48 (expr -> FLOATNUM .)
    DOTADD          reduce using rule 48 (expr -> FLOATNUM .)
    DOTSUB          reduce using rule 48 (expr -> FLOATNUM .)
    DOTMUL          reduce using rule 48 (expr -> FLOATNUM .)
    DOTDIV          reduce using rule 48 (expr -> FLOATNUM .)
    '               reduce using rule 48 (expr -> FLOATNUM .)
    ,               reduce using rule 48 (expr -> FLOATNUM .)
    :               reduce using rule 48 (expr -> FLOATNUM .)
    ]               reduce using rule 48 (expr -> FLOATNUM .)
    )               reduce using rule 48 (expr -> FLOATNUM .)
    EQ              reduce using rule 48 (expr -> FLOATNUM .)
    NE              reduce using rule 48 (expr -> FLOATNUM .)
    GE              reduce using rule 48 (expr -> FLOATNUM .)
    LE              reduce using rule 48 (expr -> FLOATNUM .)
    >               reduce using rule 48 (expr -> FLOATNUM .)
    <               reduce using rule 48 (expr -> FLOATNUM .)
    {               reduce using rule 48 (expr -> FLOATNUM .)
    RETURN          reduce using rule 48 (expr -> FLOATNUM .)
    BREAK           reduce using rule 48 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 48 (expr -> FLOATNUM .)
    PRINT           reduce using rule 48 (expr -> FLOATNUM .)
